    + =argList= has *new* convenience methods for accessing options more
      directly: =option()=, =optionFound()=, =optionLookup()=, =optionRead()=,
      =optionReadIfPresent()= .
    + The *new* =readList(Istream&)= can read a bracket-delimited list or handle
      a single value as a list of size 1. This can be a useful convenience when
      processing command-line options.

*** Misc. improvements
    + Improved consistency and interoperability between =face= and =triFace= classes.
    + =face::triangles()= can split and append to a =DynamicList=
    + =coordinateSystems= can access global systems (similar to =MeshObject=)

** Turbulence modelling
   + Major development of turbulence model libraries to give extra flexibility
     at the solver level.  For solvers that can support either RAS/LES
     computations, the selection is made in the /constant/turbulenceProperties/,
     by setting the =simulationType= keyword to:
     - =laminar=
     - =RASModel=
     - =LESModel=
   + Depending on the selection, the model is the instantiated from /constant//
     - /RASProperties/
     - /LESProperties/

**** RAS wall functions
     Wall functions are now run-time selectable per patch for RAS.
     + Velocity:
       - Apply to turbulent viscosities =nut= or =mut=
       - Apply to =k=, =Q=, =R=
       - Apply to =epsilon=, =omega=
     + Temperature:
       - Apply to turbulent thermal diffusivity, =alphat= (compressible only)

     + To apply wall functions:
       - To recapture the functionality of previous OpenFOAM versions (v1.5 and
         earlier) assign:
         - for velocity:
           - =nut=: =nutWallFunction=
           - =mut=: =muWallFunction=
           - =epsilon=: =epsilonWallFunction=
           - =omega=: =omegaWallFunction=
           - =k=, =q=, =R=: =kqRWallFunction=
         - for temperature:
           - =alphat=: =alphatWallFunction=
       - New =alphaSgsJayatillekeWallFunction= thermal wall function for
         compressible LES
