@@ -145,6 +145,8 @@
     + The *new* =readList(Istream&)= can read a bracket-delimited list or handle
       a single value as a list of size 1. This can be a useful convenience when
       processing command-line options.
+    + Export *new* environment variable =FOAM_CASENAME= that contains the
+      name part of the =FOAM_CASE= environment variable
 
 *** Misc. improvements
     + Improved consistency and interoperability between =face= and =triFace= classes.
